--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Mono|Major+Mono+Display|Inconsolata");
 html {
   height: 100%;
-  width: 100%;
+  max-width: 1260px;
+  margin:auto;
 }
 
 body {
@@ -89,6 +90,15 @@ a {
 .ben-zone img {
   max-height: 500px;
   margin: 1rem 0 1rem 0;
+}
+
+.subtext {
+  font-size: 18px;
+  color:#777;
+}
+
+.indent {
+  margin-left: 40px;
 }
 
 /*# sourceMappingURL=main.css.map */
