--- a/styles/main.css
+++ b/styles/main.css
@@ -101,4 +101,24 @@ a {
   margin-left: 40px;
 }
 
+.inlet {
+  margin: 10px;
+  width: 95%;
+  padding: 20px;
+  padding-top: 1px;
+  background-color: #ffffff;
+  border-radius: 20px;
+  color: #777;
+}
+
+#div1 {
+  display: inline-block;
+  width:40%;
+  border: 1px solid #777;
+}
+#div2 {
+  display: inline-block;
+  width:40%;
+  border: 1px solid #777;
+}
 /*# sourceMappingURL=main.css.map */
